--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
         "start": "nodemon index.js"
     },
     "dependencies": {
+        "bcrypt": "^5.0.0",
+        "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
         "express-handlebars": "^5.2.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.13",
         "validator": "^13.5.2"
     },
