--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js"
+        "start": "SET NODE_ENV=development&& nodemon index.js"
     },
     "dependencies": {
         "bcrypt": "^5.0.0",
